--- a/style.css
+++ b/style.css
@@ -1,11 +1,38 @@
-header h2 {
-  text-align: right;
+#login,
+#list-content {
+  padding: 5px 10px;
+  font-size: 40px;
 }
 
 header.list-container {
-  margin-bottom: 0;
-      border-radius: 0;
-  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-item {
+  height: 430px;
+  width: 300px;
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+}
+
+.details-image {
+  height: 450px;
+  width: 450px;
+  margin-bottom: 10px;
+}
+
+.product-image {
+  height: 200px;
+  width: 200px;
+  margin-bottom: 10px;
+}
+
+.price {
+  font-weight: bold;
 }
 
 .col-sm-4 {
@@ -38,86 +65,35 @@ body {
   padding: 20px;
 }
 
-.sidenav a:hover {
-  background-color: #ddd;
-  color: #000;
-}
-
-img {
-  width: 200px;
-  height: 200px;
-}
-
-img.product {
-  width: 350px;
-  height: 350px;
-}
-
 p {
   font-size: 16px;
   color: #888;
 }
 
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-}
-
-.row.content {
-    height: auto
-}
-
 footer {
-    background-color: #555;
-    color: white;
-    padding: 15px;
+  background-color: #555;
+  color: white;
+  padding: 15px;
 }
 
 @media screen and (max-width: 767px) {
-    .sidenav {
-        height: auto;
-        padding: 15px;
-    }
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
 
-    .row.content {
-        height: auto;
-    }
+  .row.content {
+    height: auto;
+  }
 }
 
-ul.breadcrumb {
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color: #eee;
-  }
-  ul.breadcrumb li {
-    display: inline;
-    font-size: 18px;
-  }
-  ul.breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
-  }
-  ul.breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
-  }
-  ul.breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
-  }
-
 #listContainer {
-    display: none;
-    right: 0;
-    position: fixed;
-    background-color: #333;
-    color: #fff;
-    padding: 15px;
-    border: 1px solid #ccc;
-    z-index: 1;
-  }
-
-  .list-content:hover #listContainer{
-    display: block;
-  }
+  display: none;
+  right: 0;
+  position: fixed;
+  background-color: #333;
+  color: #fff;
+  padding: 15px;
+  border: 1px solid #ccc;
+  z-index: 1;
+}
